squashing mobile bugs... v3

--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -34,6 +34,7 @@
 
     @media (max-width: 600px) {
       width: 100%;
+      gap: 3.3rem;
     }
   }
 
