--- a/src/Components/Socials/Socials.scss
+++ b/src/Components/Socials/Socials.scss
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-
 .socials {
   width: 900px;
 
@@ -12,13 +11,12 @@
     color: #fff;
     font-size: 16px;
     letter-spacing: 1px;
-    padding: .5rem;
+    padding: 0.5rem;
     margin: 0 1rem;
     margin-bottom: 1.4rem;
     margin-top: 8rem;
     text-transform: uppercase;
     font-family: 'Poppins' sans-serif !important;
-
 
     @media (min-width: 600px) {
       display: none;
@@ -41,7 +39,7 @@
     @media (max-width: 600px) {
       width: 100%;
       margin-top: -1.9rem !important;
-      margin-bottom: .8rem !important;
+      margin-bottom: 0.8rem !important;
       text-align: left;
       padding: 1rem 1.5rem;
     }
@@ -49,47 +47,45 @@
 }
 
 .connect {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  width: 100%;
+  position: absolute;
+  bottom: 155px;
+
+  @media (max-width: 600px) {
+    width: 100% !important;
+    position: relative;
+    bottom: 0;
+    padding: 1.8rem;
+  }
+
+  .connect-links {
+    min-width: 40px !important;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 2rem;
+  }
+
+  .links {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 2rem;
-    width: 100%;
-    position: absolute;
-    bottom: 155px;
+    flex-direction: row;
+    align-items: center;
+    cursor: pointer;
+    text-decoration: none;
+    color: #fff;
 
-    @media (max-width: 600px) {
-      width: 100% !important;
-      position: relative;
-      bottom: 0;
-      display: flex;
-      flex-direction: row;
-      gap: 1.9rem;
-    }
-
-    .connect-links {
-      min-width: 40px !important;
-      border: 1px solid gray;
-      border-radius: 5px;
-      padding: 2rem;
-    }
-
-    .links {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      cursor: pointer;
+    a {
       text-decoration: none;
-      color: #fff;
+    }
 
-      a {
-        text-decoration: none;
-      }
-
-      #socials {
-        font-size: 12px;
-        font-family: 'Poppins', sans-serif;
-        padding-left: .8rem;
-        padding-right: .5rem;
-      }
+    #socials {
+      font-size: 12px;
+      font-family: 'Poppins', sans-serif;
+      padding-left: 0.8rem;
+      padding-right: 0.5rem;
     }
   }
+}
